:rocket::eyeglasses:again

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,6 @@ ms_generate_map (bbox, max_tiles = 16L, mapname = "omaha")
 bbox <- rbind (c (-96.12923, -96.01011),
                c (41.26145, 41.32220))
 message ("Successfully generated 'omaha.pdf' and 'omaha.jpg'")
-readRDS ("my_map.Rds")
 ```
 As indicated, the function generates a map in both `.pdf` and `.jpg` formats.
 These files must be retained as the "master" maps against which subsequently
@@ -49,9 +48,10 @@ package](https://github.com/jonclayden/RNiftyReg), itself primarily intended to
 align brain scans and other medical images, but which is precisely the tool
 needed here.
 
-The `mapscanner` package comes with two `.jpg` images which can be used to
-demonstrate, where `f_modified` is the image shown above, modified from the
-original by drawing a red line around a particular region of Omaha.
+The `mapscanner` package comes with two sample `.jpg` images which can be used
+to demonstrate functionality. In the following code, `f_modified` is the image
+shown above, modified from the original by drawing a red line around a
+particular region of Omaha.
 ```{r scan_maps}
 f_original <- file.path ("inst", "extdata", "omaha.jpg")
 f_modified <- file.path ("inst", "extdata", "omaha_drawn.jpg")
@@ -60,9 +60,11 @@ res
 ```
 The rectification can take quite some time, during which [`RNiftyReg`
 package](https://github.com/jonclayden/RNiftyReg) is constructing the best
-transformation of the modified image back on to the original.
-
-Finally, we can plot the result as an interactive map using packages like
+transformation of the modified image back on to the original. The result of
+`ms_rectify_maps()` is a spatial object in
+[`sf`](https://cran.r-project.org/package=sf)-format representing the convex
+hull constructed around the red lines shown in the above map. Finally, we can
+plot the result as an interactive map using packages like
 [`mapdeck`](https://github.com/symbolixAU/mapdeck), or
 [`mapview`](https://github.com/r-spatial/mapview):
 
@@ -78,4 +80,8 @@ leaflet (res) %>%
              zoom = 12)
 ```
 ![](./man/figures/leaflet-1.png)
+
+And our hand-drawn line shown above has been converted to a standard spatial
+object able to be analysed in any desired way.
+
 
