--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,8 @@ The original map was generated with
 devtools::load_all (".", export_all = FALSE)
 ```
 ```{r omaha-fakey, eval = FALSE}
-bbox <- osmdata:getbb ("omaha nebraska")
+bbox <- rbind (c (-96.12923, -96.01011),
+               c (41.26145, 41.32220)) # portion of omaha
 ms_generate_map (bbox, max_tiles = 16L, mapname = "omaha")
 ```
 ```{r omaha, echo = FALSE}
@@ -64,10 +65,9 @@ The rectification can take quite some time, during which [`RNiftyReg`
 package](https://github.com/jonclayden/RNiftyReg) is constructing the best
 transformation of the modified image back on to the original. The result of
 `ms_rectify_maps()` is a spatial object in
-[`sf`](https://cran.r-project.org/package=sf)-format representing the convex
-hulls constructed around the red lines shown in the above map. Note that the
-function automatically distinguishes the two hulls. Finally, we can
-plot the result as an interactive map using packages like
+[`sf`](https://cran.r-project.org/package=sf)-format in which each drawn
+component is represented as a separate polygon. Finally, we can plot the result
+as an interactive map using packages like
 [`mapdeck`](https://github.com/symbolixAU/mapdeck), or
 [`mapview`](https://github.com/r-spatial/mapview):
 
