--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ message ("Successfully generated 'omaha.pdf' and 'omaha.jpg'")
 ```
 As indicated, the function generates a map in both `.pdf` and `.jpg` formats.
 These files must be retained as the "master" maps against which subsequently
-modified -- draw-over and scanned-in -- versions will be rectified. The `.pdf`
+modified -- drawn-over and scanned-in -- versions will be rectified. The `.pdf`
 format is generated because it will generally be the most convenient for
 printing, while the rectification itself requires `.jpg`-format images. The
 magic happens via the [`RNiftyReg`
