--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 Print maps, draw on them, scan them back in, and convert to spatial objects.
 Package comes with a sample map of Omaha, Nebraska, USA, and one with some red
 lines drawn on it:
-![](./inst/extdata/omaha_drawn.jpg)
+![](./inst/extdata/omaha_drawn.png)
 
 That's just a standard `jpeg` image with no notion of geographical coordinates.
 The original map was generated with
@@ -39,25 +39,25 @@ ms_generate_map (bbox, max_tiles = 16L, mapname = "omaha")
 ```{r omaha, echo = FALSE}
 bbox <- rbind (c (-96.12923, -96.01011),
                c (41.26145, 41.32220))
-message ("Successfully generated 'omaha.pdf' and 'omaha.jpg'")
+message ("Successfully generated 'omaha.pdf' and 'omaha.png'")
 ```
-As indicated, the function generates a map in both `.pdf` and `.jpg` formats.
+As indicated, the function generates a map in both `.pdf` and `.png` formats.
 These files must be retained as the "master" maps against which subsequently
 modified -- drawn-over and scanned-in -- versions will be rectified. The `.pdf`
 format is generated because it will generally be the most convenient for
-printing, while the rectification itself requires `.jpg`-format images. The
+printing, while the rectification itself requires `.png`-format images. The
 magic happens via the [`RNiftyReg`
 package](https://github.com/jonclayden/RNiftyReg), itself primarily intended to
 align brain scans and other medical images, but which is precisely the tool
 needed here.
 
-The `mapscanner` package comes with two sample `.jpg` images which can be used
+The `mapscanner` package comes with two sample `.png` images which can be used
 to demonstrate functionality. In the following code, `f_modified` is the image
 shown above, modified from the original by drawing a red line around a
 particular region of Omaha.
 ```{r scan_maps}
-f_original <- file.path ("inst", "extdata", "omaha.jpg")
-f_modified <- file.path ("inst", "extdata", "omaha_drawn.jpg")
+f_original <- file.path ("inst", "extdata", "omaha.png")
+f_modified <- file.path ("inst", "extdata", "omaha_drawn.png")
 system.time (res <- ms_rectify_maps (f_original, f_modified, type = "polygons"))
 res
 ```
