--- a/vignettes/mapscanner.Rmd
+++ b/vignettes/mapscanner.Rmd
@@ -21,37 +21,77 @@ requireNamespace ("sf")
 
 ## What does this package do for me?
 
-
 `mapscanner` is an **R** package that enables maps to be printed out, drawn on,
-scanned back in, and have the drawn components converted to spatial objects. 
+scanned back in, and have the drawn components converted to spatial objects. It
+is intended for use in social surveys and similar endeavours in which printed
+paper maps are preferred over digital screens, and enables marks drawn by hand
+on paper maps to be converted to spatial objects. The use of paper maps is
+often advantageous because (i) they cost much less than computer devices
+otherwise needed for digital equivalents; and (ii) they may in many situations
+be deemed to yield more reliable or accurate results through removing the
+psychological barrier often associated with screen-based surveys.
 
 ## How do I use it?
 
-Briefly, the package is designed to enable the following workflow:
-
-1. Generate a map with the `ms_generate_map()` function, which automatically
-   produces both `.pdf` and `.png` versions;
-2. Print the `.pdf` version to use as desired in any kind of survey environment
-   where drawing on paper is more convenient -- or more importantly, where it
-   may be judged to yield more accurate results;
-3. Draw on the map;
-4. Digitise the drawn-on (from here on, "modified") map, converting it to
-   either `.pdf` or `.png` format. (Common methods here are scanning, or even
-   just photographing with a mobile device); and
-5. Rectify the modified version with the original via the `ms_rectify_maps()`
-   function, which distinguishes the individual annotations, and converts each
-   one to a spatial object able to be analysed in any desired manner.
-
-The two primary functions are described in more detail below.
-
-
-## How do I install it?
+### Installation
 
 `mapscanner` is not yet on CRAN, so must be installed with the `remotes`
 package:
 ```{r install, eval = FALSE}
 remotes::install_github ("mpadge/mapscanner")
 ```
+After that, the library can be loaded with
+```{r load}
+library (mapscanner)
+```
+
+### Usage
+
+The package is designed to enable the following workflow:
+
+1. Generate a map with the `ms_generate_map()` function, which automatically
+   produces both `.pdf` and `.png` versions;
+
+2. Print the `.pdf` version to use as desired in any kind of survey environment;
+
+3. Draw on the map;
+
+4. Digitise the drawn-on (from here on, "modified") map, converting it to
+   either `.pdf` or `.png` format; and
+
+5. Rectify the modified version against the original via the
+   `ms_rectify_maps()` function, which distinguishes individual annotations,
+   and converts each one to a spatial object able to be analysed in any desired
+   manner.
+
+Unlike most software packages, `mapscanner` is intended to aid a *practical*
+workflow, and so a few practical tips may be recommended here to ensure best
+results:
+
+1. The original digital files generated with `ms_generate_map()` are necessary
+   to rectify subsequently drawn-on and scanned maps, and so must be retained
+   at all times.
+2. Marks drawn on maps should be *coloured* -- any black or grey markings will
+   be ignored. This has the advantage that individual annotations *not*
+   intended to be converted to spatial objects may be made on maps in black or
+   grey.
+3. For drawings of areas, care should be taken to ensure all lines form closed
+   polygons; only in cases where this is not possible or practicable, the `type
+   = "hulls"` argument should be used in map rectification, as described
+   further below.
+4. Digitised versions should contain *white* borders, so do not, for example,
+   photograph modified maps lying on dark surfaces. If maps are to be
+   photographed, then best results can be achieved by simply placing them on
+   a larger, enclosing sheet of white paper.
+
+The following two sections describe the two primary functions of the
+`mapscanner` package, corresponding to the two primary steps of producing maps
+to be used in surveys, and rectifying modified maps against these originals in
+order to extract spatial objects. The second of these sections also describes
+the kinds of markings able to be recognised, and the kinds of spatial objects
+to which these may be converted.
+
+
 
 ## Map generation
 
@@ -59,27 +99,43 @@ The `ms_generate_map()` function generates printable maps for a specified
 bounding box in both `.pdf` and `.png` formats. Usage is a simple as,
 ```{r generate-fakey, eval = FALSE}
 ms_generate_map ("chennai india", mapname = "chennai")
+message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
 ```
+```{r generate, echo = FALSE}
+message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
+```
+
 The two generated maps are saved in the current working directory (`getwd()`).
-To save in alternative locations, the `mapname` parameter can The `mapname` can
-optionally specify paths, 
-```{r generate-fakey2, eval = FALSE}
-ms_generate_map ("chennai india", mapname = file.path ("my", "directory", "chennai"))
-```
-The map is generated in two formats, because the `.pdf` version will generally
+To save maps in alternative locations, the `mapname` parameter can optionally
+specify paths. To provide finer control over the scales of maps, a precise
+bounding box can be submitted to `ms_generate_map()`. To determine desired
+bounding boxes, we recommend using the [openstreetmap.org
+website](https://openstreetmap.org), zooming to desired area, then clicking the
+"Export" button. A window will appear which includes the bounding coordinates
+of the current screen. Even finer control can be gained by clicking beneath
+this coordinate window on the line which says, "Manually select a different
+area," which brings a drag-able rectangle onto the current screen. The
+coordinates in the bounding box then simply need to be entered in to the `bbox`
+parameter of `ms_generate_map()` in the order (`xmin`, `ymin`, `xmax`, `ymax`)
+-- or anti-clockwise from the left-hand coordinate.
+
+Maps are generated in two formats, because the `.pdf` version will generally
 be the most convenient for printing, while the `png` version should be retained
 as the "master" copy against which to rectify subsequently scanned-in version.
-
 Behind the scenes, the function downloads a series of vector map tiles from
 [mapbox](https://mapbox.com), and converts them to a `rasterBrick` object from
-the [`raster` package](https://cran.r-project.org/package=raster).
-This `rasterBrick` object is invisibly returned from the function:
+the [`raster` package](https://cran.r-project.org/package=raster). This
+`rasterBrick` object is invisibly returned from the function:
 ```{r chennaiBrick-fakey, eval = FALSE}
 x <- ms_generate_map ("chennai india", mapname = "chennai")
+```
+```{r, echo = FALSE}
+message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
+```
+```{r x, eval = FALSE}
 x
 ```
 ```{r chennaiBrick, echo = FALSE}
-message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
 x <- paste0 ("class      : RasterBrick\n",
     "dimensions : 574, 282, 161868, 3  (nrow, ncol, ncell, nlayers)\n",
     "resolution : 76.43703, 76.43703  (x, y)\n",
@@ -91,6 +147,9 @@ x <- paste0 ("class      : RasterBrick\n",
     "max values :     255,     255,     255")
 message (x)
 ```
+This `rasterBrick` object contains raster information for the three colour
+channels of the image, and so may also be used for immediate viewing within
+**R** with `raster::plotRGB(x)`.
 
 Standard uses of the package should not need to explicitly access or modify
 these data, but it is nevertheless possible to do so, and then use a
@@ -103,21 +162,24 @@ ms_generate_map (raster_brick = x, mapname = "chennai")
 
 ## Map rectification
 
-The procedure outlined in the first four of the five steps above should produce
-one or more digitised versions of maps with coloured annotations. The 
-`ms_rectify_maps()` function rectifies these maps with the original, returning
-the drawn-on objects as spatial objects in [Simple Features
+Having produced digital maps using the `ms_generate_map()` function as
+described above, and having printed, variously drawn-on, and scanned the result
+back in to digital form, the package can then be used to rectify the hand-drawn
+markings against the original map with the `ms_rectify_maps()` function, which
+returns the drawn-on objects as spatial objects in [Simple Features
 (`sf`)](https://cran.r-project.org/package=sf) format. The only requirement is
 that the drawn-on objects are coloured; black or grey objects will not be
-recognised.
+recognised. As described above, this has the advantage that maps may be
+annotated in ways not intended to be converted to spatial objects (such as
+adding unique identification codes), through simply providing such annotations
+in grey or black.
 
-This function has only two primary arguments, specifying the names (and
-locations) of the original and modified map files. These files should ideally
-be in `.png` formats, but will be auto-converted from `.pdf` if needed. (The
-`.png` format is necessary for the actual rectification function, as described
-below.) The package comes with two sample maps, both in `.png` format. The
-first is the reference version needed for rectification, while the second has
-two red lines drawn upon it:
+The `ms_rectify_maps()` function has only two primary arguments, specifying the
+names (and locations) of the original and modified map files -- in that order:
+`ms_rectify_maps(original, modified)`. These files should ideally be in `.png`
+formats, but will be auto-converted from `.pdf` if needed. The package comes
+with two sample maps, both in `.png` format. The first is the reference version
+needed for rectification, while the second has two red lines drawn upon it:
 
 ![](omaha-polygons.png)
 
@@ -129,31 +191,9 @@ f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_maps (f_orig, f_mod)
 xy
 ```
-
-The `ms_rectify_maps()` function has an additional argument, `type`, with
-a default value of `"polygons"`. These polygons are the outlines traced around
-each individual drawn object. This tracing is pixel-based, resulting in
-polygons with one point for each scanned pixel which can be both overly large
-objects as well as visually pixillated. The function includes an additional
-`downsample` parameter for `type = "polygon"` which down-samples as smooths the
-resultant polygons by the specified multiple.
-
-Two other `type` parameters are:
-
-1. `hulls` to return convex hulls surrounding all pixels in each object; and
-2. `points` to return single points (as geometric centroids) for each object.
-
-The default type of `polygons` assumes -- and indeed requires -- that the drawn
-objects are *closed* polygons, so care must be taken to ensure this is in fact
-the case. Any lines that do not form closed circles will not be appropriately
-translated. The `type = "hulls"` argument is provided for cases where closed
-lines are inappropriate, while the `type = "points"` argument is provided for
-identification of individual point locations regardless of the kinds of marks
-actually drawn on a map (dots, circles, crosses, or any shape, should all give
-equivalent results).
-
-The result of `ms_rectify_maps()` can, for example, be submitted directly to an
-online mapping package such as `mapview`:
+The result of `ms_rectify_maps()` can be plotted using any standard option for
+plotting spatial data, such as through online mapping packages such as
+`mapview`:
 ```{r mapview, eval = FALSE, echo = FALSE}
 xy$id <- seq (nrow (xy))
 x <- mapview::mapview (xy)
@@ -167,17 +207,42 @@ mapview::mapview (xy)
 ![](mapshot.png)
 
 
+### Types of map markings and types of spatial objects
+
+The `ms_rectify_maps()` function has an additional argument, `type`, which
+takes the following values:
+
+1. `type = "polygons"` (the default), which returns the outlines traced around
+   each individual drawn object. This tracing is pixel-based, resulting in
+   polygons with one point for each scanned pixel which may generate spatial
+   objects that are both overly large as well as visually pixillated. The
+   function includes an additional `downsample` parameter which down-samples as
+   smooths the resultant polygons by the specified multiple.
+2. `type = "hulls"`, which returns convex hulls around distinct sets of
+   contiguously marked lines, regardless of whether those lines form closed
+   polygons or not.
+3. `type = "points"`, which returns single points (as geometric centroids) for
+   each object. This is useful for identification of individual point locations
+   regardless of the kinds of marks actually drawn on a map (dots, circles,
+   crosses, or any shape, should all give equivalent results).
+
+The default type of `polygons` assumes -- and indeed requires -- that the drawn
+objects are *closed* polygons (as illustrated in the first of the above
+figures), so care must be taken to ensure this is in fact the case. Any lines
+that do not form closed circles will not be appropriately translated.
+
+
 ## How it works
 
-(Feel free to skip this section, which provides detail for those interested in
-how the process actually works.) `mapscanner` primarily relies on the
-[`RNiftyReg` package](https://github.com/jonclayden/RNiftyReg) to rectify the
-images. This package is itself primarily aimed at rectifying medical scans, but
-also happens to be the perfect tool for the present purposes. Being an image
-recognition software, the library requires image objects, and so not `pdf`
-files, which is why the `ms_generate_map()` function produces both kinds of
-image - the `.pdf` for printing and the `.png` for rectifying with the
-`RNiftyReg` package.
+(This section is not necessary for package usage, and merely provides detail
+for those interested in how the process actually works.) `mapscanner` primarily
+relies on the [`RNiftyReg` package](https://github.com/jonclayden/RNiftyReg) to
+rectify the images. This package is itself primarily aimed at rectifying
+medical scans, but also happens to be the perfect tool for the present
+purposes. Being an image recognition software, the library requires image
+objects, and so not `pdf` files, which is why the `ms_generate_map()` function
+produces both kinds of files - the `.pdf` for printing and the `.png` for
+rectifying with the `RNiftyReg` package.
 
 Rectification re-projects a scanned image back on to the coordinate system of
 an original image. This coordinate system translates here in to a defined
@@ -197,9 +262,8 @@ x <- list ("Title" = "EX8921118.44521949+1442748.9088827+8942673.68719591+148662
 x
 ```
 
-or in a terminal via `pdfinfo` (or non-linux equivalent). The equivalent meta
-information is embedded in the `.png` file as comment, accessible
-like this:
+or in a terminal via `pdfinfo` (or non-linux equivalent), and embedded in the
+`.png` file as comment, accessible like this:
 
 ```{r img-comment-fakey, eval = FALSE}
 img <- magick::image_read ("chennai.png")
@@ -208,20 +272,7 @@ magick::image_comment (img)
 ```{r img-comment, echo = FALSE}
 "EX8921118.44521949+1442748.9088827+8942673.68719591+1486623.76311839"
 ```
-or in a terminal via `identify -verbose` command (itself part of `imagemagick`).
+or in a terminal via `identify -verbose` command (itself part of the
+`imagemagick` library which drives the [`magick` **R**
+package](https://github.com/ropensci/magick)).
 
-## Tips for Practical Usage
-
-Observing the following points will ensure that the `mapscanner` package
-produces optimal results:
-
-1. Do not lose the original versions generated with `ms_generate_map()` --
-   without at least one of these files, no scanned-in maps can be rectified.
-2. Drawings on maps should be in colour - not black or grey.
-3. For drawings of areas, care should be taken to ensure all lines form closed
-   polygons; only in cases where this is not possible or practicable, the `type
-   = "hulls"` argument should be used in map rectification.
-4. The digitised version should contain a *white* border, so do not, for
-   example, photograph the drawn-on map lying on a dark surface. If maps are to
-   be photographed, then best results can be achieved by simply placing them on
-   a larger, enclosing sheet of white paper.
