--- a/vignettes/mapscanner.Rmd
+++ b/vignettes/mapscanner.Rmd
@@ -29,7 +29,7 @@ on paper maps to be converted to spatial objects. The use of paper maps is
 often advantageous because (i) they cost much less than computer devices
 otherwise needed for digital equivalents; and (ii) they may in many situations
 be deemed to yield more reliable or accurate results through removing the
-psychological barrier often associated with screen-based surveys.
+psychological barriers often associated with screen-based surveys.
 
 ## How do I use it?
 
@@ -49,8 +49,9 @@ library (mapscanner)
 
 The package is designed to enable the following workflow:
 
-1. Generate a map with the `ms_generate_map()` function, which automatically
-   produces both `.pdf` and `.png` versions;
+1. Generate a map with the
+   [`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+   function, which automatically produces both `.pdf` and `.png` versions;
 
 2. Print the `.pdf` version to use as desired in any kind of survey environment;
 
@@ -60,21 +61,25 @@ The package is designed to enable the following workflow:
    either `.pdf` or `.png` format; and
 
 5. Rectify the modified version against the original via the
-   `ms_rectify_maps()` function, which distinguishes individual annotations,
+   [`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+   function, which distinguishes individual annotations,
    and converts each one to a spatial object able to be analysed in any desired
    manner.
+
+### Practical tips
 
 Unlike most software packages, `mapscanner` is intended to aid a *practical*
 workflow, and so a few practical tips may be recommended here to ensure best
 results:
 
-1. The original digital files generated with `ms_generate_map()` are necessary
-   to rectify subsequently drawn-on and scanned maps, and so must be retained
-   at all times.
+1. The original digital files generated with
+   [`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+   are necessary to rectify subsequently drawn-on and scanned maps, and so must
+   be retained at all times.
 2. Marks drawn on maps should be *coloured* -- any black or grey markings will
    be ignored. This has the advantage that individual annotations *not*
-   intended to be converted to spatial objects may be made on maps in black or
-   grey.
+   intended to be converted to spatial objects (such as unique identification
+   or participant codes) may be made on maps in black or grey.
 3. For drawings of areas, care should be taken to ensure all lines form closed
    polygons; only in cases where this is not possible or practicable, the `type
    = "hulls"` argument should be used in map rectification, as described
@@ -95,11 +100,12 @@ to which these may be converted.
 
 ## Map generation
 
-The `ms_generate_map()` function generates printable maps for a specified
-bounding box in both `.pdf` and `.png` formats. Usage is a simple as,
+The
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+function generates printable maps for a specified bounding box in both `.pdf`
+and `.png` formats. Usage is a simple as,
 ```{r generate-fakey, eval = FALSE}
 ms_generate_map ("chennai india", mapname = "chennai")
-message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
 ```
 ```{r generate, echo = FALSE}
 message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
@@ -107,17 +113,18 @@ message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
 
 The two generated maps are saved in the current working directory (`getwd()`).
 To save maps in alternative locations, the `mapname` parameter can optionally
-specify paths. To provide finer control over the scales of maps, a precise
-bounding box can be submitted to `ms_generate_map()`. To determine desired
-bounding boxes, we recommend using the [openstreetmap.org
-website](https://openstreetmap.org), zooming to desired area, then clicking the
-"Export" button. A window will appear which includes the bounding coordinates
-of the current screen. Even finer control can be gained by clicking beneath
-this coordinate window on the line which says, "Manually select a different
-area," which brings a drag-able rectangle onto the current screen. The
-coordinates in the bounding box then simply need to be entered in to the `bbox`
-parameter of `ms_generate_map()` in the order (`xmin`, `ymin`, `xmax`, `ymax`)
--- or anti-clockwise from the left-hand coordinate.
+specify paths. To provide finer control over the scales of maps, precise
+bounding boxes can also be submitted. To determine desired bounding boxes, we
+recommend using the ['openstreetmap.org' website](https://openstreetmap.org),
+zooming to a desired area, then clicking the "Export" button. A window will
+appear which includes the bounding coordinates of the current screen. Even
+finer control can be gained by clicking beneath this coordinate window on the
+line which says, "Manually select a different area," which brings a drag-able
+rectangle onto the current screen. The coordinates in the bounding box then
+simply need to be entered in to the `bbox` parameter of
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+in the order (`xmin`, `ymin`, `xmax`, `ymax`) -- or anti-clockwise from the
+left-hand coordinate.
 
 Maps are generated in two formats, because the `.pdf` version will generally
 be the most convenient for printing, while the `png` version should be retained
@@ -154,7 +161,8 @@ channels of the image, and so may also be used for immediate viewing within
 Standard uses of the package should not need to explicitly access or modify
 these data, but it is nevertheless possible to do so, and then use a
 custom-modified object to produce the external `.pdf` and `.png` files by
-submitting the `rasterBrick` object to `ms_generate_map()`:
+submitting the `rasterBrick` object to
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html):
 ```{r chennaiBrick2, eval = FALSE}
 ms_generate_map (raster_brick = x, mapname = "chennai")
 ```
@@ -162,20 +170,24 @@ ms_generate_map (raster_brick = x, mapname = "chennai")
 
 ## Map rectification
 
-Having produced digital maps using the `ms_generate_map()` function as
-described above, and having printed, variously drawn-on, and scanned the result
-back in to digital form, the package can then be used to rectify the hand-drawn
-markings against the original map with the `ms_rectify_maps()` function, which
-returns the drawn-on objects as spatial objects in [Simple Features
-(`sf`)](https://cran.r-project.org/package=sf) format. The only requirement is
-that the drawn-on objects are coloured; black or grey objects will not be
-recognised. As described above, this has the advantage that maps may be
-annotated in ways not intended to be converted to spatial objects (such as
-adding unique identification codes), through simply providing such annotations
-in grey or black.
+Having produced digital maps using the
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+function as described above, and having printed, variously drawn-on, and
+scanned the result back in to digital form, the package can then be used to
+rectify the hand-drawn markings against the original map with the
+[`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+function, which returns the drawn-on objects as spatial objects in [Simple
+Features (`sf`)](https://cran.r-project.org/package=sf) format. The only
+requirement is that the drawn-on objects are coloured; black or grey objects
+will not be recognised. As described above, this has the advantage that maps
+may be annotated in ways not intended to be converted to spatial objects (such
+as adding unique identification or participant codes), through simply providing
+such annotations in grey or black.
 
-The `ms_rectify_maps()` function has only two primary arguments, specifying the
-names (and locations) of the original and modified map files -- in that order:
+The
+[`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+function has only two primary arguments, specifying the names (and locations)
+of the original and modified map files -- in that order:
 `ms_rectify_maps(original, modified)`. These files should ideally be in `.png`
 formats, but will be auto-converted from `.pdf` if needed. The package comes
 with two sample maps, both in `.png` format. The first is the reference version
@@ -191,9 +203,10 @@ f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_maps (f_orig, f_mod)
 xy
 ```
-The result of `ms_rectify_maps()` can be plotted using any standard option for
-plotting spatial data, such as through online mapping packages such as
-`mapview`:
+The result of
+[`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+can be plotted using any standard option for plotting spatial data, such as
+through online mapping packages such as `mapview`:
 ```{r mapview, eval = FALSE, echo = FALSE}
 xy$id <- seq (nrow (xy))
 x <- mapview::mapview (xy)
@@ -204,13 +217,14 @@ xy$id <- seq (nrow (xy))
 mapview::mapview (xy)
 ```
 
-![](mapshot.png)
+![](mapshot-polys.png)
 
 
 ### Types of map markings and types of spatial objects
 
-The `ms_rectify_maps()` function has an additional argument, `type`, which
-takes the following values:
+The
+[`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
+function has an additional argument, `type`, which takes the following values:
 
 1. `type = "polygons"` (the default), which returns the outlines traced around
    each individual drawn object. This tracing is pixel-based, resulting in
@@ -231,6 +245,120 @@ objects are *closed* polygons (as illustrated in the first of the above
 figures), so care must be taken to ensure this is in fact the case. Any lines
 that do not form closed circles will not be appropriately translated.
 
+The other `type` values are illustrated in the following maps:
+```{r type-hulls}
+f_orig <- system.file ("extdata", "omaha.png", package = "mapscanner")
+f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
+xy <- ms_rectify_maps (f_orig, f_mod, type = "hulls", quiet = TRUE)
+```
+```{r mapview-hulls, eval = FALSE, echo = FALSE}
+xy$id <- seq (nrow (xy))
+x <- mapview::mapview (xy)
+mapview::mapshot (x, file = "mapshot-hulls.png")
+```
+```{r mapview-hulls-fakey, eval = FALSE}
+xy$id <- seq (nrow (xy))
+mapview::mapview (xy)
+```
+
+![](mapshot-hulls.png)
+
+
+```{r type-points}
+f_orig <- system.file ("extdata", "omaha.png", package = "mapscanner")
+f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
+xy <- ms_rectify_maps (f_orig, f_mod, type = "points", quiet = TRUE)
+```
+```{r mapview-points, eval = FALSE, echo = FALSE}
+xy$id <- seq (nrow (xy))
+x <- mapview::mapview (xy)
+mapview::mapshot (x, file = "mapshot-points.png")
+```
+```{r mapview-points-fakey, eval = FALSE}
+xy$id <- seq (nrow (xy))
+mapview::mapview (xy)
+```
+
+![](mapshot-points.png)
+
+
+
+## Bonus Feature: Polygon Aggregation
+
+Maps are typically used in social surveys to delineate participant's
+understanding or perception of particular regions or areas. In such contexts,
+surveys often result in numerous polygonal shapes representing different
+perceptions of a particular region. The `mapscanner` package provides an
+additional function, `ms_aggregate_polys()`, to aggregate polygons into
+a single "heat map" containing vector outlines of aggregated polygons. Each
+component of these aggregated polygons defines the region within which `n`
+polygons overlap.
+
+The following is a slightly more complicated version of the example provided
+for `ms_aggregate_polys()`, starting by generating a series of polygons as
+convex hulls surrounding random points.
+```{r random-polys-fakey, eval = FALSE}
+n <- 5 # number of polygons
+polys <- lapply (seq (n), function (i) {
+                     nxy <- 20 # number of points used to generate hull
+                     xy <- matrix (runif (2 * nxy), ncol = 2)
+                     h <- chull (xy)
+                     sf::st_polygon (list (xy [c (h, h [1]), ]))
+            })
+polys <- sf::st_sf (n = seq (n), geometry = polys)
+aggr <- ms_aggregate_polys (polys)
+polys$type <- "raw polygons"
+aggr$type <- "aggregated polygons"
+polys <- rbind (polys, aggr)
+library (ggplot2)
+ggplot (polys, aes (fill = n)) + geom_sf () + facet_wrap (~type)
+```
+```{r random-polys, echo = FALSE}
+n <- 5 # number of polygons
+polys <- lapply (seq (n), function (i) {
+                     nxy <- 20 # number of points used to generate hull
+                     xy <- matrix (runif (2 * nxy), ncol = 2)
+                     h <- chull (xy)
+                     sf::st_polygon (list (xy [c (h, h [1]), ]))
+            })
+polys <- sf::st_sf (n = seq (n), geometry = polys)
+aggr <- ms_aggregate_polys (polys)
+polys$type <- "raw polygons"
+aggr$type <- "aggregated polygons"
+polys <- rbind (polys, aggr)
+library (ggplot2)
+theme_set (theme_minimal ())
+labeller <- c (
+               `aggregated polygons` = "raw polygons",
+               `raw polygons` = "aggregated polygons")
+ggplot (polys, aes (fill = n)) + geom_sf () +
+    facet_wrap (~rev (type), labeller = as_labeller (labeller))
+```
+
+The left panel of that figure shows the random polygons in raw form
+successively overlaid upon one another. The right panel shows the
+aggregated contours of successive overlap from 1 to 5. The object returned from
+[`ms_aggregate_polys()`](https://mpadge.github.io/mapscanner/reference/ms_aggregate_polys.html)
+contains polygons ordered by level of aggregation (`n`), so the first entirely
+encloses the second; the second encloses the third; and so on. Particular
+contours can then be directly selected by filtering for desired values of `n`:
+```{r aggr13}
+ggplot (aggr [aggr$n %in% c (1, 3, 5), ], aes (fill = n)) + geom_sf ()
+```
+
+Polygon aggregation enables many interesting analyses to be performed, such as
+relationships between aggregation level and area:
+```{r aggr-area}
+aggr$area <- sf::st_area (aggr)
+ggplot (aggr, aes (x = n, y = area)) + geom_line (size = 2)
+```
+
+That result is of course (roughly) linear, because it was derived from random
+data. In actual usage, results such as that are likely to generate direct
+insight into consensus of opinion regarding how people understand particular
+areas.
+
+
 
 ## How it works
 
@@ -240,17 +368,18 @@ relies on the [`RNiftyReg` package](https://github.com/jonclayden/RNiftyReg) to
 rectify the images. This package is itself primarily aimed at rectifying
 medical scans, but also happens to be the perfect tool for the present
 purposes. Being an image recognition software, the library requires image
-objects, and so not `pdf` files, which is why the `ms_generate_map()` function
-produces both kinds of files - the `.pdf` for printing and the `.png` for
-rectifying with the `RNiftyReg` package.
+objects, and so not `pdf` files, which is why the
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html)
+function produces both kinds of files - the `.pdf` for printing and the `.png`
+for rectifying with the `RNiftyReg` package.
 
 Rectification re-projects a scanned image back on to the coordinate system of
 an original image. This coordinate system translates here in to a defined
 bounding box (which will generally differ slightly from the values input into
 the function, due to the cutting and stitching of the vector tiles). This
 bounding box is embedded as meta-information in both the files produced by
-`ms_generate_map()`; in the `.pdf` as standard meta information accessible in
-**R** like this:
+[`ms_generate_map()`](https://mpadge.github.io/mapscanner/reference/ms_generate_map.html);
+in the `.pdf` as standard meta information accessible in **R** like this:
 
 ```{r pdfinfo-fakey, eval = FALSE}
 pdftools::pdf_info ("chennai.pdf")$keys
